--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 		
-		<link rel="stylesheet" type="text/css" href="./css/_polices.css">
+		<link rel="stylesheet" type="text/css" href="./css/polices.css">
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
-		<link rel="stylesheet" type="text/css" href="./css/_pictures.css">
-		<link rel="stylesheet" type="text/css" href="./css/_colors.css">
-		<link rel="stylesheet" type="text/css" href="./css/_icons.css">
-		<link rel="stylesheet" type="text/css" href="./css/_responsive.css">		
+		<link rel="stylesheet" type="text/css" href="./css/pictures.css">
+		<link rel="stylesheet" type="text/css" href="./css/colors.css">
+		<link rel="stylesheet" type="text/css" href="./css/icons.css">
+		<link rel="stylesheet" type="text/css" href="./css/responsive.css">		
 		
 		<script src="./js/jquery-2.1.0.js" defer></script>
 		<script src="./js/bootstrap.js" defer></script>
