Test Balises OpenGraph

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr-FR">
+<html lang="fr-FR" xmlns:og="http://ogp.me/ns#">
 	
 	<head>
 		<title>La Chouette Agence</title>
@@ -8,10 +8,14 @@
 		<meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		
-		<!-- **************************** -->
+		<meta property="og:url" content="https://seraphingithub.github.io/FatetSeraphin_4_12042021/">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="La Chouette Agence">
+		<meta property="og:description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.">
+		<meta property="og:image" content="https://seraphingithub.github.io/FatetSeraphin_4_12042021/img/logo.png">
+
 		<meta name="robots" content="index, follow">
 		<link rel="canonical" href="https://seraphingithub.github.io/FatetSeraphin_4_12042021/">
-		<!-- **************************** -->
 		
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		
@@ -29,8 +33,8 @@
 		<script src="./js/jquery-2.1.0.js" defer></script>
 		<script src="./js/bootstrap.js" defer></script>
 		<script src="./js/blocs.js" defer></script>
-		<script src="./js/jquery.touchSwipe.js" defer></script>
-		<script src="./js/gmaps.js" defer></script>
+		<!-- <script src="./js/jquery.touchSwipe.js" defer></script> -->
+		<!-- <script src="./js/gmaps.js" defer></script> -->
 	</head>
 
 
