Website Done ! > Responsive + Minified JS Files + Minified CSS Files + Clean unused JS code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr-FR" xmlns:og="http://ogp.me/ns#">
+<html lang="fr-FR" prefix="og: https://ogp.me/ns#">
 	
 	<head>
 		<title>La Chouette Agence</title>
@@ -17,22 +17,21 @@
 		<meta name="robots" content="index, follow">
 		<link rel="canonical" href="https://seraphingithub.github.io/FatetSeraphin_4_12042021/">
 		
-		<link rel="shortcut icon" type="image/png" href="favicon.webp">
+		<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
 		
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap-Minified.css">
+		<link rel="stylesheet" type="text/css" href="./css/font-awesome-Minified.css">
+		<link rel="stylesheet" type="text/css" href="./css/et-line-Minified.css">
 		
-		<link rel="stylesheet" type="text/css" href="./css/polices.css">
-		<link rel="stylesheet" type="text/css" href="./css/style.css">
-		<link rel="stylesheet" type="text/css" href="./css/pictures.css">
-		<link rel="stylesheet" type="text/css" href="./css/colors.css">
-		<link rel="stylesheet" type="text/css" href="./css/icons.css">
-		<link rel="stylesheet" type="text/css" href="./css/responsive.css">		
+		<link rel="stylesheet" type="text/css" href="./css/polices-Minified.css">
+		<link rel="stylesheet" type="text/css" href="./css/style-Minified.css">
+		<link rel="stylesheet" type="text/css" href="./css/pictures-Minified.css">
+		<link rel="stylesheet" type="text/css" href="./css/colors-Minified.css">
+		<link rel="stylesheet" type="text/css" href="./css/responsive-Minified.css">		
 		
-		<script src="./js/jquery-2.1.0 - Minified.js" defer></script>
-		<script src="./js/bootstrap - Minified.js" defer></script>
-		<script src="./js/blocs - Minified.js" defer></script>
+		<script src="js/jquery-2.1.0-Minified.js" defer></script>
+		<script src="js/bootstrap-Minified.js" defer></script>
+		<script src="js/blocs-Minified.js" defer></script>
 	</head>
 
 
@@ -71,7 +70,7 @@
 							
 				<h1 class="flex-center">La chouette agence</h1>
 	
-				<a href="contact.html" class="flex-center btn-contact">CONTACT</a>
+				<a href="contact.html" class="flex-center btn btn-contact">CONTACT</a>
 			</div>
 		</section>
 
@@ -252,7 +251,7 @@
 					Contactez notre équipe !
 				</h2>
 
-				<a href="contact.html" class="flex-center btn-contact">CONTACT</a>
+				<a href="contact.html" class="flex-center btn btn-contact">CONTACT</a>
 			</div>
 		</section>
 
