Test Wave Accessibility

--- a/contact.html
+++ b/contact.html
@@ -11,16 +11,16 @@
 		
 		<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
 		
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap-Minified.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome-Minified.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line-Minified.css">
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 		
-		<link rel="stylesheet" type="text/css" href="./css/polices-Minified.css">
-		<link rel="stylesheet" type="text/css" href="./css/style-Minified.css">
-		<link rel="stylesheet" type="text/css" href="./css/style-contact-Minified.css">
-		<link rel="stylesheet" type="text/css" href="./css/pictures-Minified.css">
-		<link rel="stylesheet" type="text/css" href="./css/colors-Minified.css">
-		<link rel="stylesheet" type="text/css" href="./css/responsive-Minified.css">
+		<link rel="stylesheet" type="text/css" href="./css/polices.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
+		<link rel="stylesheet" type="text/css" href="./css/style-contact.css">
+		<link rel="stylesheet" type="text/css" href="./css/pictures.css">
+		<link rel="stylesheet" type="text/css" href="./css/colors.css">
+		<link rel="stylesheet" type="text/css" href="./css/responsive.css">
 	</head>
 
 	<body>
@@ -59,27 +59,27 @@
 
 		<!-- Section Formulaires -->
 		<section class="flex-center section2-contact">
-			<h2 class="W3C_Validator">_</h2> <!-- W3C Validator No Error -->
+			<h2 class="W3C_Validator">W3C</h2> <!-- W3C Validator No Error -->
 			
 			<form class="flex-center formulaires-contact">
 				<div class="form-group">
-					<label>Nom</label>
-					<input id="name" class="form-control" placeholder="Entrez votre nom et prénom" required />
+					<label for="name">Nom</label>
+					<input id="name" class="form-control" type="text" placeholder="Entrez votre nom et prénom" required/>
 				</div>
 
 				<div class="form-group">
-					<label>Adresse email</label>
-					<input id="email" class="form-control" placeholder="Entrez votre adresse mail" type="email" required />
+					<label for="email">Adresse email</label>
+					<input id="email" class="form-control" type="email" placeholder="Entrez votre adresse mail" required/>
 				</div>
 
 				<div class="form-group">
-					<label>Comment nous avez-vous connu ?</label>
-					<input id="input_504" class="form-control" placeholder="Faite-le-nous savoir" type="email" required />
+					<label for="input_504">Comment nous avez-vous connu ?</label>
+					<input id="input_504" class="form-control" type="text" placeholder="Faite-le-nous savoir" required/>
 				</div>
 
 				<div class="form-group">
-					<label>Brief de votre projet<br>(Ajoutez autant de détails que nécessaire)</label>
-					<textarea id="message" class="form-control" rows="6" cols="70" placeholder="Décrivez le nous en quelques mots" required></textarea>
+					<label for="message">Brief de votre projet<br>(Ajoutez autant de détails que nécessaire)</label>
+					<textarea id="message" class="form-control" rows="6" cols="70" type="text" placeholder="Décrivez le nous en quelques mots" required></textarea>
 				</div> 
 
 				<button class="btn btn-envoyer" type="submit">
@@ -96,7 +96,7 @@
 
 		<!-- footer -->
 		<footer class="flex-center footer-contact">
-			<p class="white">
+			<p class="text-footer">
 				La chouette agence - Agence web basée à Lyon.<br>
 			</p>		
 		</footer>
