Test Gift of Speed

--- a/contact.html
+++ b/contact.html
@@ -3,24 +3,11 @@
 
 	<head>
 		<title>Contact</title>
-		
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
 		<meta name="robots" content="noindex, nofollow">
-		
-		<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
-		
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-		
-		<link rel="stylesheet" type="text/css" href="./css/polices.css">
-		<link rel="stylesheet" type="text/css" href="./css/style.css">
-		<link rel="stylesheet" type="text/css" href="./css/style-contact.css">
-		<link rel="stylesheet" type="text/css" href="./css/pictures.css">
-		<link rel="stylesheet" type="text/css" href="./css/colors.css">
-		<link rel="stylesheet" type="text/css" href="./css/responsive.css">
+		<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">	
+		<link rel="stylesheet" type="text/css" href="./css/total_css_minified-P2.css">
 	</head>
 
 	<body>
